# h5_template

./: CMakeLists.txt  README.md  main.cpp
site/: .gitignore  README.md  package-lock.json  package.json
site/app/: NavigationBar.css  NavigationBar.tsx  Zone.tsx  Zones.tsx  globals.css  layout.tsx  page.tsx
site/app/crown/: page.tsx
site/app/deduplicate/: page.tsx
site/app/lethos/: page.tsx
site/app/m3/: page.tsx
site/app/mask/: page.tsx
site/app/maze/: page.tsx
site/app/rainbow/: page.tsx
site/app/spider/: page.tsx
site/app/sun/: page.tsx
site/public/: crown.json  lethos.json  m3.json  mask.json  maze.json  rainbow.json  spider.json  sun.json
src/: CMakeLists.txt  parser_items.cpp  parser_items.hpp
test/: CMakeLists.txt  io_utils.cpp  io_utils.hpp  test_parser_items.cpp
